WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58890
REGRESSION (
r84206
): 50 tests failing on SnowLeopard Intel Release (WebKit2 Tests) due to extra "supportsFullScreen() == true" output
https://bugs.webkit.org/show_bug.cgi?id=58890
Summary
REGRESSION (r84206): 50 tests failing on SnowLeopard Intel Release (WebKit2 T...
Adam Roben (:aroben)
Reported
2011-04-19 06:27:20 PDT
r84194
, 1 failure:
http://build.webkit.org/builders/SnowLeopard%20Intel%20Release%20%28WebKit2%20Tests%29/builds/10828
r84210
, 51 failures:
http://build.webkit.org/builders/SnowLeopard%20Intel%20Release%20%28WebKit2%20Tests%29/builds/10829
All the extra failures look like this: @@ -1,3 +1,4 @@ +supportsFullScreen() == true layer at (0,0) size 800x600 RenderView at (0,0) size 800x600 layer at (0,0) size 800x50
Attachments
Patch
(5.97 KB, patch)
2011-04-19 09:53 PDT
,
Jer Noble
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-04-19 06:46:19 PDT
<
rdar://problem/9304546
>
Jer Noble
Comment 2
2011-04-19 09:43:28 PDT
The 51 failures which have the extra stdout line in them look like the fault of
r84206
. I'll take this.
Jer Noble
Comment 3
2011-04-19 09:53:30 PDT
Created
attachment 90211
[details]
Patch
Adam Roben (:aroben)
Comment 4
2011-04-19 09:54:17 PDT
Comment on
attachment 90211
[details]
Patch Not only does it default to false, no one ever sets it to true! Is that really what we want?
Jer Noble
Comment 5
2011-04-19 09:56:52 PDT
Since it's in the .idl, it can be set from within a test script. I can imagine it being helpful to turn on only for the LayoutTests/fullscreen/ set of tests.
Jer Noble
Comment 6
2011-04-19 10:05:50 PDT
Committed
r84262
: <
http://trac.webkit.org/changeset/84262
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug