Tools/WebKitTestRunner/InjectedBundle/LayoutTestController.h
@@ -67,6 +67,7 @@ public:
     void dumpSelectionRect() { } // Will need to do something when we support pixel tests.
     void dumpStatusCallbacks() { m_dumpStatusCallbacks = true; }
     void dumpTitleChanges() { m_dumpTitleChanges = true; }
+    void dumpFullScreenCallbacks() { m_dumpFullScreenCallbacks = true; }
 
     // Special options.
     void keepWebHistory();
@@ -129,6 +130,7 @@ public:
     bool shouldDumpStatusCallbacks() const { return m_dumpStatusCallbacks; }
     bool shouldDumpTitleChanges() const { return m_dumpTitleChanges; }
     bool shouldDumpPixels() const { return m_dumpPixels; }
+    bool shouldDumpFullScreenCallbacks() const { return m_dumpFullScreenCallbacks; }
 
     bool waitToDump() const { return m_waitToDump; }
     void waitToDumpWatchdogTimerFired();
@@ -170,6 +172,7 @@ private:
     bool m_dumpStatusCallbacks;
     bool m_dumpTitleChanges;
     bool m_dumpPixels;
+    bool m_dumpFullScreenCallbacks;
     bool m_waitToDump; // True if waitUntilDone() has been called, but notifyDone() has not yet been called.
     bool m_testRepaint;
     bool m_testRepaintSweepHorizontally;
